# snowduck

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.devcontainer/: connections.toml  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  index.md
docs/_docs/: dbt.md  functions.md  index.md  installation.md  limitations.md  quickstart.md  rest-api.md  testing.md
examples/: .gitignore  01-getting-started.ipynb  02-data-operations.ipynb  03-functions.ipynb  04-advanced-sql.ipynb  05-json-arrays.ipynb  notebook.ipynb
snowduck/: __init__.py  decorators.py  macros.py  patch.py  seeding.py
snowduck/connector/: __init__.py  connection.py  connector.py  cursor.py  rowtype.py
snowduck/dialect/: __init__.py  context.py  dialect.py  preprocess.py  transforms.py
snowduck/helper/: __init__.py  sql.py
snowduck/info_schema/: __init__.py  account_information_schema.sql  database_information_schema.sql  describe_info_schema.sql  describe_table.sql  manager.py  show_databases.sql  show_objects.sql  show_schemas.sql
snowduck/server/: __init__.py  arrow.py  middleware.py  serializers.py  server.py  session_manager.py  shared.py
tests/: conftest.py  test_edge_cases.py  test_seeding.py
tests/connector/: test_alter_session.py  test_connection.py  test_create_or_replace.py  test_cursor.py  test_json_execution.py  test_merge.py  test_merge_delete.py  test_multistatement.py  test_pandas_fetch.py  test_patch_restart.py  test_persistence.py  test_put.py  test_put_copy.py  test_rowtype.py  test_write_pandas.py
tests/dbt_compat/: __init__.py  test_dbt_snowflake_compat.py
tests/dialect/: test_advanced_features.py  test_aggregate_functions.py  test_array_functions.py  test_cache.py  test_conditional_functions.py  test_conversion_functions.py  test_date_functions.py  test_date_functions_extended.py  test_date_string_literals.py  test_generator.py  test_hash_functions.py  test_json.py  test_json_functions.py  test_new_functions.py  test_null_ordering.py  test_numeric_functions.py  test_preprocess.py  test_regex_functions.py  test_transforms.py  (+7 more)
(+33 files in other folders)
